found error in styling, used flex to correctly align lable

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
 }
 
 .LnS-switch {
-    color: #0074FD;
+    color: #0074fd;
     border: none;
     background-color: white;
 }
